# spnavcfg

./: Makefile  meson.build
src/: main.c  meson.build
